// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ButtonGroupComponent should match snapshot with all props 1`] = `
<div>
  <ul
    class="fr-btns-group fr-btns-group--right fr-btns-group--equisized fr-btns-group--md"
  >
    <li>
      <div
        data-mockid="SimpleButton"
      />
    </li>
    <li>
      <div
        data-mockid="SimpleButton"
      />
    </li>
  </ul>
</div>
`;

exports[`ButtonGroupComponent should match snapshot with default props 1`] = `
<div>
  <ul
    class="fr-btns-group fr-btns-group--left fr-btns-group--inline"
  >
    <li>
      <div
        data-mockid="SimpleButton"
      />
    </li>
    <li>
      <div
        data-mockid="SimpleButton"
      />
    </li>
  </ul>
</div>
`;

exports[`ButtonGroupComponent should show only one button when there is only one button 1`] = `
<div>
  <div
    class="fr-btns-group fr-btns-group--left fr-btns-group--inline"
  >
    <div
      data-mockid="SimpleButton"
    />
  </div>
</div>
`;
